# nabto-embedded-sdk

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Jenkinsfile  Jenkinsfile-windows  LICENSE.md  LICENSING.md  README.md  VERSION  VERSION.txt  nabto_modules_files.cmake  nabto_primary_files.cmake  third-party-licenses.md  vcpkg-configuration.json  vcpkg.json
apps/common/: CMakeLists.txt  device_config.c  device_config.h  json_config.c  json_config.h  logging.c  logging.h  private_key.c  private_key.h  prompt_stdin.c  prompt_stdin.h  random_string.c  random_string.h  string_file.c  string_file.h
apps/tcp_tunnel_device/: CMakeLists.txt  README.md  default_iam_config.json  local_initial_pairing_iam_config.json  local_invite_iam_config.json  local_open_pairing_iam_config.json  password_open_pairing_iam_config.json
examples/custom_allocator/: CMakeLists.txt  README.md  custom_allocator_device.c  simple_coap_device.c
examples/heat_pump/: CMakeLists.txt  README.md
examples/simple_password_authentication/: CMakeLists.txt  README.md  simple_password_authentication_device.c
examples/stream_tunnel_app/: CMakeLists.txt
examples/thermostat/: CMakeLists.txt  README.md
integration_examples/custom_allocator/: CMakeLists.txt  README.md
platform_integration_example/: CMakeLists.txt  README.md  select_unix_event_queue.c  select_unix_event_queue.h  select_unix_notify.h  select_unix_platform.c  select_unix_platform_test.c  thread_event_queue.c  thread_event_queue.h
platform_integration_example/doc/: api_adapters.md  introduction.md  low_level_adapter.md  np_platform.md
platform_integration_guide/step1/: CMakeLists.txt  step1_test.c
platform_integration_guide/step1_threads/: CMakeLists.txt  threads_test.c
platform_integration_guide/step2/: CMakeLists.txt  platform_integration_step2.c  step2_test.c
platform_integration_guide/step2_basic_device/: CMakeLists.txt
platform_integration_guide/step3_logging/: CMakeLists.txt
platform_integration_guide/step4_timestamps/: CMakeLists.txt
platform_integration_guide/step6_dns/: CMakeLists.txt  dns_test.c  platform_integration.c
platform_integration_steps/: CMakeLists.txt  README.md
platform_integration_steps/step1_threads/: CMakeLists.txt
platform_integration_steps/step2_basic_device/: basic_device_test.c
platform_integration_steps/step4_timestamps/: CMakeLists.txt  platform_integration.c  timestamp_test.c
platform_integration_steps/step5_event_queue/: event_queue_test.c
platform_integration_steps/step6_dns/: platform_integration.c
platform_integration_steps/step7_network/: platform_integration.c
platform_integration_steps/step8_local_ip/: CMakeLists.txt  local_ip_test.c  platform_integration.c
platform_integration_steps/step9_mdns/: CMakeLists.txt  mdns_test.c  platform_integration.c
platform_integration_stub/: CMakeLists.txt  README.md  platform_integration_stub.cpp
src/api/: CMakeLists.txt  libnabto_device.version  nabto_api_future_queue.c  nabto_api_future_queue.h  nabto_device.c  nabto_device_authorization.c  nabto_device_authorization.h  nabto_device_authorization_attributes.c  nabto_device_authorization_events.c  nabto_device_coap.c  nabto_device_coap.h  nabto_device_config.h  nabto_device_connection_events.c  nabto_device_crypto_speed_test.c  nabto_device_defines.h  nabto_device_error.c  nabto_device_error.h  nabto_device_event_handler.c  nabto_device_event_handler.h  nabto_device_event_queue.c  nabto_device_event_queue.h  nabto_device_events.c  nabto_device_experimental.c  nabto_device_experimental_set_private_key_secp256r1_mbedtls.c  nabto_device_experimental_set_private_key_secp256r1_wolfssl.c  nabto_device_fcm.c  nabto_device_future.c  nabto_device_future.h  nabto_device_future_queue.c  nabto_device_future_queue.h  nabto_device_iam.c  nabto_device_iam.h  nabto_device_ice_servers.c  nabto_device_integration.c  nabto_device_integration.h  nabto_device_internal.c  nabto_device_internal.h  nabto_device_listener.c  nabto_device_listener.h  nabto_device_logging.c  (+30 more)
src/core/: CMakeLists.txt  nc_attacher.c  nc_attacher.h  nc_attacher_attach_end.c  nc_attacher_attach_start.c  nc_attacher_fcm.c  nc_attacher_get_turn_server.c  nc_attacher_ice_servers.c  nc_attacher_sct.c  nc_attacher_service_invoke.c  nc_attacher_test.c  nc_attacher_watchdog.c  nc_attacher_watchdog.h  nc_cbor.c  nc_cbor.h  nc_client_connect.c  nc_client_connect.h  nc_client_connect_dispatch.c  nc_client_connect_dispatch.h  nc_client_connect_test.c  nc_client_connection.c  nc_client_connection.h  nc_client_connection_dispatch.c  nc_client_connection_dispatch.h  nc_client_connection_test.c  nc_coap.c  nc_coap.h  nc_coap_client.c  nc_coap_client.h  nc_coap_packet_printer.c  nc_coap_packet_printer.h  nc_coap_rest_error.c  nc_coap_rest_error.h  nc_coap_server.c  nc_coap_server.h  nc_config.h  nc_connection.c  nc_connection.h  nc_connection_event.h  nc_connection_test.c  (+55 more)
src/nabto_device_libevent/: CMakeLists.txt  Config.cmake.in  README.md  libevent_event_queue.c  libevent_event_queue.h  nabto_device_libevent_integration_test.cpp  nabto_platform_libevent.c
src/platform/: CMakeLists.txt  communication_buffer.h  error_code.h  event_queue.c  event_queue.h  event_queue_test.c  ip_address.c  ip_address.h  ip_address_test.c  ip_address_test.h  logging.c  logging.h  logging_defines.h  logging_test.c  logging_test.cpp  nabto_logging.c  nabto_logging.h  nabto_logging_defines.h  nabto_logging_test.c  nabto_logging_test.h  np_access_control.h  np_allocator.c  np_allocator.h  np_authorization.h  np_client_connect.h  np_communication_buffer.h  np_completion_event.c  np_completion_event.h  np_config.h  np_connection.h  np_crypto.h  np_dns.h  np_dns_wrapper.c  np_dns_wrapper.h  np_dtls.h  np_dtls_cli.h  np_dtls_srv.h  (+62 more)
test/: CMakeLists.txt
test_cpp/: CMakeLists.txt  helper.cpp  helper.hpp  test_platform.cpp  test_platform.hpp  test_platform_epoll.hpp  test_platform_event_queue.c  test_platform_event_queue.h  test_platform_libevent.hpp  test_platform_select_unix.hpp  test_platform_test.cpp  unit_test.cpp
(+929 files in other folders)
