cmake_minimum_required(VERSION 3.2)
add_subdirectory(step1_threads)
add_subdirectory(step2_basic_device)
add_subdirectory(step3_logging)
add_subdirectory(step4_timestamps)
add_subdirectory(step5_event_queue)
add_subdirectory(step6_dns)
add_subdirectory(step7_network)
add_subdirectory(step8_local_ip)
add_subdirectory(step9_mdns)
